lib/flutter_opencv_ffi_bindings_generated.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings for `src/flutter_opencv_ffi.h`.
///
/// Regenerate bindings with `dart run ffigen --config ffigen.yaml`.
///
class FlutterOpencvFfiBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  FlutterOpencvFfiBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  FlutterOpencvFfiBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  /// A very short-lived native function.
  ///
  /// For very short-lived functions, it is fine to call them on the main isolate.
  /// They will block the Dart execution while running the native function, so
  /// only do this for native functions which are guaranteed to be short-lived.
  int sum(
    int a,
    int b,
  ) {
    return _sum(
      a,
      b,
    );
  }

  late final _sumPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Int)>>('sum');
  late final _sum = _sumPtr.asFunction<int Function(int, int)>();

  /// A longer lived native function, which occupies the thread calling it.
  ///
  /// Do not call these kind of native functions in the main isolate. They will
  /// block Dart execution. This will cause dropped frames in Flutter applications.
  /// Instead, call these native functions on a separate isolate.
  int sum_long_running(
    int a,
    int b,
  ) {
    return _sum_long_running(
      a,
      b,
    );
  }

  late final _sum_long_runningPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Int)>>(
          'sum_long_running');
  late final _sum_long_running =
      _sum_long_runningPtr.asFunction<int Function(int, int)>();

  ffi.Pointer<ffi.Char> opencv_version() {
    return _opencv_version();
  }

  late final _opencv_versionPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
          'opencv_version');
  late final _opencv_version =
      _opencv_versionPtr.asFunction<ffi.Pointer<ffi.Char> Function()>();

  ffi.Pointer<ffi.Uint8> opencv_detect_edges_rgba(
    ffi.Pointer<ffi.Uint8> rgba,
    int width,
    int height,
    int low_threshold,
    int high_threshold,
    ffi.Pointer<ffi.Int32> output_length,
  ) {
    return _opencv_detect_edges_rgba(
      rgba,
      width,
      height,
      low_threshold,
      high_threshold,
      output_length,
    );
  }

  late final _opencv_detect_edges_rgbaPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Uint8> Function(
              ffi.Pointer<ffi.Uint8>,
              ffi.Int32,
              ffi.Int32,
              ffi.Int32,
              ffi.Int32,
              ffi.Pointer<ffi.Int32>)>>('opencv_detect_edges_rgba');
  late final _opencv_detect_edges_rgba = _opencv_detect_edges_rgbaPtr
      .asFunction<
          ffi.Pointer<ffi.Uint8> Function(ffi.Pointer<ffi.Uint8>, int, int, int,
              int, ffi.Pointer<ffi.Int32>)>();

  int opencv_detect_document_8_points_rgba(
    ffi.Pointer<ffi.Uint8> rgba,
    int width,
    int height,
    ffi.Pointer<ffi.Float> points,
  ) {
    return _opencv_detect_document_8_points_rgba(
      rgba,
      width,
      height,
      points,
    );
  }

  late final _opencv_detect_document_8_points_rgbaPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<ffi.Uint8>, ffi.Int32, ffi.Int32,
              ffi.Pointer<ffi.Float>)>>('opencv_detect_document_8_points_rgba');
  late final _opencv_detect_document_8_points_rgba =
      _opencv_detect_document_8_points_rgbaPtr.asFunction<
          int Function(ffi.Pointer<ffi.Uint8>, int, int, ffi.Pointer<ffi.Float>)>();

  ffi.Pointer<ffi.Uint8> opencv_crop_enhance_document_8_points_rgba(
    ffi.Pointer<ffi.Uint8> rgba,
    int width,
    int height,
    ffi.Pointer<ffi.Float> points,
    ffi.Pointer<ffi.Int32> output_width,
    ffi.Pointer<ffi.Int32> output_height,
    ffi.Pointer<ffi.Int32> output_length,
  ) {
    return _opencv_crop_enhance_document_8_points_rgba(
      rgba,
      width,
      height,
      points,
      output_width,
      output_height,
      output_length,
    );
  }

  late final _opencv_crop_enhance_document_8_points_rgbaPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Uint8> Function(
              ffi.Pointer<ffi.Uint8>,
              ffi.Int32,
              ffi.Int32,
              ffi.Pointer<ffi.Float>,
              ffi.Pointer<ffi.Int32>,
              ffi.Pointer<ffi.Int32>,
              ffi.Pointer<ffi.Int32>)>>(
      'opencv_crop_enhance_document_8_points_rgba');
  late final _opencv_crop_enhance_document_8_points_rgba =
      _opencv_crop_enhance_document_8_points_rgbaPtr.asFunction<
          ffi.Pointer<ffi.Uint8> Function(
              ffi.Pointer<ffi.Uint8>,
              int,
              int,
              ffi.Pointer<ffi.Float>,
              ffi.Pointer<ffi.Int32>,
              ffi.Pointer<ffi.Int32>,
              ffi.Pointer<ffi.Int32>)>();

  void opencv_free(
    ffi.Pointer<ffi.Uint8> pointer,
  ) {
    return _opencv_free(
      pointer,
    );
  }

  late final _opencv_freePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Uint8>)>>(
          'opencv_free');
  late final _opencv_free =
      _opencv_freePtr.asFunction<void Function(ffi.Pointer<ffi.Uint8>)>();
}
